# KattisSolutions

C++/: Autori.cpp  CMakeLists.txt  HeartRate.cpp  batterup.cpp  beanbag.cpp  carrots.cpp  convexhullGraham.cpp  convexhullOpower2.cpp  exactchange2.cpp  font.cpp  geppetto.cpp  knapsack.cpp  knightfens.cpp  longincsubseq.c  longincsubseqplus.cpp  main.cpp  nextPermutation.cpp  oddities.cpp  orders.cpp  qaly.cpp  r2.cpp  tarifa.cpp
Python/: 4thoughts.py  ACMContestScoring.py  AlphabetSpam.py  BeanBag.py  BeautifulPrimes.py  Cantor.py  EqualSumEasy.py  Factovisors.py  Holeynqueenbatmat2.py  Holeynqueensbatman.py  HowManyDigits.py  HowManyZeros.py  InverseFactorial.py  Measurement.py  MirrorImages.py  MixedFractions.py  Orders.py  Pangram.py  Satisfiability.py  Test.py  YinYang.py  batterup.py  convexpolygonarea.py  datum.py  dicecup.py  digitsum.py  filip.py  geppetto.py  humancannonball.py  lastfactorialdigit.py  longincsubseq.py  oddities.py  pot.py  qaly.py
