cmake_minimum_required(VERSION 3.15)
project(C__)

set(CMAKE_CXX_STANDARD 14)

add_executable(knightfens knightfens.cpp)
add_executable(Autori Autori.cpp)
add_executable(geppetto geppetto.cpp)
add_executable(font font.cpp)
add_executable(beanbag beanbag.cpp)
add_executable(qaly qaly.cpp)
add_executable(HeartRate HeartRate.cpp)
add_executable(longincsubseq longincsubseq.c)
add_executable(longincsubseqplus longincsubseqplus.cpp)
add_executable(orders orders.cpp)
add_executable(main main.cpp)
add_executable(tarifa tarifa.cpp)
add_executable(carrots carrots.cpp)
add_executable(r2 r2.cpp)
add_executable(oddities oddities.cpp)
add_executable(knapsack knapsack.cpp)
add_executable(convexhullOpower2 convexhullOpower2.cpp)
add_executable(convexhullGraham convexhullGraham.cpp)
add_executable(exactchange2 exactchange2.cpp)
add_executable(batterup batterup.cpp)